[package]
name = "opus"
version = "0.3.0"
authors = ["Tad Hardesty <tad@platymuus.com>"]

description = "Safe Rust bindings for libopus"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["opus", "codec", "voice", "sound", "audio"]
categories = [
	"api-bindings",
	"encoding",
	"compression",
	"multimedia::audio",
	"multimedia::encoding",
]

repository = "https://github.com/SpaceManiac/opus-rs"
documentation = "https://docs.rs/opus/0.3.0/opus"

[dependencies]
audiopus_sys = { git="https://github.com/DCNick3/opus-rs",branch = "unsafe-libopus",default-features = false,features = ["unsafe-libopus-backend "]}
libc = "0.2"
